--- a/project-management/src/main/resources/templates/layouts.html
+++ b/project-management/src/main/resources/templates/layouts.html
@@ -7,6 +7,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
 </head>
 
+<nav th:fragment="navbar-default" class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">Project IO</a>
+	</div>
+</nav>
+
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">Project IO</a>
